<resources>
    <string name="app_name">ShareHit</string>
    <string name="todo" />
    <string name="tuto1_recom">Recommandez du contenu à vos amis !</string>
    <string name="inscription">Inscription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artiste">artiste</string>
    <string name="film">film</string>
    <string name="jeuvideo">jeuVideo</string>
    <string name="serie">serie</string>
    <string name="album">album</string>
    <string name="morceau">morceau</string>
    <string name="question">Quel type de recommandation voulez-vous faire?</string>
</resources>
